src/tests/lexical_analysis_error/invalid_integer_expression/snapshots/monkey_interpreter__tests__lexical_analysis_error__invalid_integer_expression__test_invalid_integer_expression_case_2_lexical_analysis_error.snap
---
source: src/tests/lexical_analysis_error/invalid_integer_expression/mod.rs
assertion_line: 15
expression: error
---
Err(
    "Unparsable context for lexical analysis \"123.0\" at line 1, column 3.",
)
