src/tests/lexical_analysis_error/invalid_integer_expression/snapshots/monkey_interpreter__tests__lexical_analysis_error__invalid_integer_expression__test_invalid_integer_expression_case_4_lexical_analysis_error.snap
---
source: src/tests/lexical_analysis_error/invalid_integer_expression/mod.rs
assertion_line: 19
expression: error
---
Err(
    "The integer literal \"99999999999999999999\" does not fit into a signed 64 bit integer.",
)
